Bug 396732. Cache codepoints with no fonts to avoid repeated system-wide font lookup. r+sr=vlad