gfx/thebes/public/gfxFontUtils.h
@@ -143,7 +143,13 @@ public:
         return size;
     }
 
-
+    // clear out all blocks in the array
+    void reset() {
+        PRUint32 i;
+        for (i = 0; i < mBlocks.Length(); i++)
+            mBlocks[i] = nsnull;    
+    }
+    
     nsTArray< nsAutoPtr<Block> > mBlocks;
 };
 
